--- a/nazia_portfolio.html
+++ b/nazia_portfolio.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="#project">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Nazia_resume.pdf" download="Nazia_resume.pdf">Resume🗎</a>
+                        <a class="nav-link" href="pdf/Nazia_resume.pdf" download="pdf/Nazia_resume.pdf">Resume🗎</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -61,7 +61,7 @@
    <!--Landing page section-->
    <div class="container-part-1 text-center custom-gradient">
     <div class="row d-flex justify-content-center align-items-center">
-            <img src="C:/Users/ntaba/OneDrive/Desktop/Nazia_portfolio/nazia2.jpg" class="img-thumbnail img-left" alt="...">
+            <img src="img/nazia2.jpg" class="img-thumbnail img-left" alt="...">
             <p class="fs-3">⋆⁺₊ Nazia Tabassum Toma ⋆⁺₊ </p>
             <p class="fs-6"> Hey there! I'm a CS MEng student at the University of Cincinnati, passionate about software engineering, problem solving & exploring the exciting world of Machine Learning!</p>
             <p><br></p>
@@ -75,7 +75,7 @@
                 <p class="fs-1">About Me  </p>
         </div> 
         <div class="about-me-part">
-            <img src="C:/Users/ntaba/OneDrive/Desktop/Nazia_portfolio/Nazia pp1.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+            <img src="img/Nazia pp1.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
         
             <p>
                 I just finished my coursework for a Master’s in Computer Science at the University of Cincinnati and am working as a Software Developer for a remote Canadian company. I built and now manage their food order-taking app. I have previous industry & research experience in Artificial Intelligence, especially in Natural Language Processing.
@@ -102,16 +102,16 @@
 
             <div class="experience-description">
             <p>
-                <img src="c:\Users\ntaba\OneDrive\Desktop\Taco Tango Order App\taco.png" class= img-size> Software Developer - 
+                <img src="img\taco.png" class= img-size> Software Developer - 
                 <span class="small-text">Taco Tango Ordering App, Canada (Remote) </span> &emsp; &emsp; &ensp; &nbsp; &nbsp; &nbsp; &nbsp; <span class="small-text2">April 2024 - Present</span> <br>
             </p>
             <p>
-                <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\nsu_logo.jpg" class= img-size> Teaching Assistant - 
+                <img src="img\nsu_logo.jpg" class= img-size> Teaching Assistant - 
                 <span class="small-text">North South University, Bangladesh </span> &emsp; &emsp; &emsp; &emsp; &emsp; &nbsp; &nbsp; &nbsp;<span class="small-text2">October 2021 - May 2022</span> <br>
             </p>
 
             <p>
-                <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\barikoi_logo.png" class= img-size> Intern (Software Engineer) - 
+                <img src="img\barikoi_logo.png" class= img-size> Intern (Software Engineer) - 
                 <span class="small-text">Barikoi Technologies Ltd, Bangladesh </span> &emsp; &nbsp; &nbsp; &nbsp;<span class="small-text2">July 2021 - September 2021</span> <br>
             </p>
         </div>
@@ -132,7 +132,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\bug_project.png" class="card-img-top" alt="...">
+            <img src="img\bug_project.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Automated Bug Classification and Resolution Prediction System</h5>
               <p class="card-text">NLP-based BugFix module that intelligently categorizes and anticipates the resolution trajectory of bug reports, which optimizes the software maintenance process for enhanced efficiency and resource allocation</p>
@@ -148,7 +148,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\mb.png" class="card-img-top" alt="...">
+            <img src="img\mb.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cross-Content Recommendation between Movie and Book Using Machine Learning </h5>
               <p class="card-text">This project introduces a novel cross-content recommendation system that suggests books based on movie descriptions and vice versa. It employs natural language processing and machine learning techniques, offering fresh and diverse content recommendations beyond traditional methods.</p>
@@ -165,7 +165,7 @@
 
         <div class="col">
             <div class="card h-100">
-              <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\dc.png" class="card-img-top" alt="...">
+              <img src="img\dc.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Desktop Cleaner</h5>
                 <p class="card-text">A practical tool designed to automatically organize files on your desktop into designated folders based on file type, including Python scripts, C++ files, PDFs, images, and executables. This Python-based application simplifies desktop management, enhancing productivity and system efficiency.</p>
@@ -186,7 +186,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\wh.png" class="card-img-top" alt="...">
+            <img src="img\wh.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Writer's Hub</h5>
               <p class="card-text">A universal digital portal tailored for writers, Writer's Hub offers a space where creatives can publish, exchange, and monetize their works on a globally accessible platform. It combines a user-friendly interface with advanced features like category-based searches and a premium content option, all built for optimal responsiveness and user experience.</p>
@@ -202,7 +202,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-              <img src="C:\Users\ntaba\OneDrive\Desktop\Nazia_portfolio\cf.png" class="card-img-top" alt="...">
+              <img src="img\cf.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Coupon Searching Platform</h5>
                 <p class="card-text">An online platform revolutionizing how users access and utilize discounts, Coupon Finder offers a seamless way to discover, compare, and leverage top deals across various product categories. The platform includes features such as searchable coupon codes, direct shop website redirection, and personalized email notifications.</p>
