fixed phone screen responsiveness issue

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <p class="fs-1">About Me  </p>
         </div> 
         <div class="about-me-part">
-            <img src="img/Nazia pp1.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+
+            <img src="img/Nazia pp1.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 img-fluid" alt="...">
         
             <p>
                 I just finished my coursework for a Master’s in Computer Science at the University of Cincinnati and am working as a Software Developer for a remote Canadian company. I built and now manage their food order-taking app. I have previous industry & research experience in Artificial Intelligence, especially in Natural Language Processing.
@@ -125,7 +126,7 @@
             </p>
         </div>
 
-
+        
             </div>             
     </div>
 
