--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#project">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pdf/Nazia Tabassum Toma_Resume.pdf" download="pdf/Nazia_resume.pdf">Resume🗎</a>
+                        <a class="nav-link" href="pdf/Nazia Tabassum Toma_Resume.pdf" download="pdf/Nazia Tabassum Toma_Resume.pdf">Resume🗎</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
